samples/_failures_safe/1761651119_2f0de3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29e6ff25.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_29e6ff25.c:172:16: error: expected declaration or statement at end of input
  172 |         struct GraphEdge *edge = node->edges;
      |                ^~~~~~~~~
./samples/SAFE/__tmp_29e6ff25.c:172:16: error: expected declaration or statement at end of input
